implement Parser's parse method